Alteração do XML
Alteração do XML para inserir as mensagens enviadas e recebidas. Feito uma base da página caixa de entrada.

--- a/CSS/caixaEntrada.css
+++ b/CSS/caixaEntrada.css
@@ -20,6 +20,22 @@ body {
 
 	padding-top: 10px;
 	text-align:  center;
-	
+	padding-right: 100px;
+	position: center;
+}
+
+#head
+{
+	background-color: blue;
+	height: 50px;
+}
+
+#pesquisa
+{
+	margin-top: 1%;
+	margin-left: 4%;
+}
+#titulo
+{
 
 }
