--- a/CSS/caixaEntrada.css
+++ b/CSS/caixaEntrada.css
@@ -1,57 +1,6 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #F3F2FF;
-    margin: 0;
-}
+#mensagens{
 
-#menuLateral {
-    margin-left: 0%;
-    margin-top: 3%;
-    width: 250px;
-    padding: 10px;
-}
+    margin-left: 50%;
+    
 
-#linhas {
-    padding-top: 10px;
-    position: center;
-    padding-right: 100px;
-}
-
-#linhaCentro {
-    padding-top: 10px;
-    text-align: center;
-    padding-right: 100px;
-    position: center;
-}
-
-#head {
-    background-color: blue;
-    height: 50px;
-}
-
-#pesquisa {
-    margin-top: 1%;
-    margin-left: 4%;
-}
-
-#cabecalho {
-    background-color: #3590C4;
-    margin: none;
-    width: 100%;
-}
-
-#image_menu {
-    width: 40%;
-    margin-right: 30px;
-}
-
-#tPesquisar {
-    width: 300px;
-    height: 30px;
-    border-radius: 2px;
-    border: 1px solid grey;
-}
-
-#tPesquisar::placeholder {
-    padding: 3px;
 }
